--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -1,3 +1,35 @@
 <!--Fonts from Google"s Web font directory at http://google.com/webfonts -->
 <link href="http://fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
+
+<!-- Mathjax config similar to math.stackexchange --> 
+
+<script type = "text / x-mathjax-config" > 
+  MathJax Hub Config ({of 
+    tex2jax :  { 
+      inlineMath to :  [  [ '$' , '$' ]  [ "\ \ ( \ \) " ]  ], 
+      processEscapes :  true 
+    } 
+  }); 
+</ script> 
+
+<script type = "text / x-mathjax-config" > 
+    MathJax Hub Config ({ 
+      tex2jax :  { 
+        skipTags :  [ 'script' ,  'noscript' ,  'style' ,  'textarea' ,  'pre' ,  'code' ] 
+      } 
+    }); 
+</ script> 
+
+<script type = "text / x-mathjax-config" > 
+    MathJax . Hub Queue ( function ()  { 
+        var  all  = to  MathJax . Hub getAllJax (),  i ; 
+        for ( i = 0 ;  i  <  all . length ;  i  + =  1 )  { 
+            all [ i ]. SourceElement (). parentNode . className  + =  'has-jax' ; 
+        } 
+    }); 
+</ script> 
+
+<script type = "text / javascript" 
+   src = "http://cdn.mathjax.org/mathjax/latest/MathJax.js?config to = the TeX-AMS-MML_HTMLorMML " > 
+</ script>
