--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -2,34 +2,10 @@
 <link href="http://fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
 
-<!-- Mathjax config similar to math.stackexchange --> 
-
-<script type = "text / x-mathjax-config" > 
-  MathJax Hub Config ({of 
-    tex2jax :  { 
-      inlineMath to :  [  [ '$' , '$' ]  [ "\ \ ( \ \) " ]  ], 
-      processEscapes :  true 
-    } 
-  }); 
-</ script> 
-
-<script type = "text / x-mathjax-config" > 
-    MathJax Hub Config ({ 
-      tex2jax :  { 
-        skipTags :  [ 'script' ,  'noscript' ,  'style' ,  'textarea' ,  'pre' ,  'code' ] 
-      } 
-    }); 
-</ script> 
-
-<script type = "text / x-mathjax-config" > 
-    MathJax . Hub Queue ( function ()  { 
-        var  all  = to  MathJax . Hub getAllJax (),  i ; 
-        for ( i = 0 ;  i  <  all . length ;  i  + =  1 )  { 
-            all [ i ]. SourceElement (). parentNode . className  + =  'has-jax' ; 
-        } 
-    }); 
-</ script> 
-
-<script type = "text / javascript" 
-   src = "http://cdn.mathjax.org/mathjax/latest/MathJax.js?config to = the TeX-AMS-MML_HTMLorMML " > 
-</ script>
+<!-- MathJax config -->
+<script type="text/x-mathjax-config">
+   MathJax.Hub.Config({
+            tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+   });
+</script>
+<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
